--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
-        "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0"
+        "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.13.0"
     },
     "require-dev": {
